--- a/style.css
+++ b/style.css
@@ -10,3 +10,8 @@
  Tags: blog, e-commerce, food-and-drink, one-column, two-columns, three-columns, grid-layout, left-sidebar, right-sidebar, custom-background, custom-colors, custom-header, flexible-header, full-width-template, custom-menu, custom-logo, featured-images, footer-widgets, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready     
  Text Domain:  twentyfifteenchild
 */
+
+.menu-image-title-after.menu-image-not-hovered img {
+    padding-right: 40px;
+    width: 15vh;
+}
