--- a/style.css
+++ b/style.css
@@ -38,4 +38,8 @@
     padding: 0 1rem;
 }
 
-/* Carousel - Metaslider Plugin */
+
+.metaslider .caption-wrap {
+  background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)) !important;
+  text-align: center;
+}
