--- a/style.css
+++ b/style.css
@@ -38,7 +38,40 @@
     padding: 0 1rem;
 }
 
+.header-socials-icon {
+    width: 50px;
+    height: 50px; 
+    font-size: 2rem;
+}
+
+.fab {
+    padding-top: 0.5rem !important;
+}
+
 .metaslider .caption-wrap {
   background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)) !important;
   text-align: center;
+}
+
+.product {
+    box-shadow: 1px 3px 3px #5f422525;
+}
+
+.products {
+    padding: 1rem !important;
+}
+
+.product_type_simple, .add_to_cart_button {
+    display: none !important;
+}
+
+.woocommerce-loop-product__title, .price {
+    color: #5f4225 !important;
+    padding: 0.3em !important;
+    font-weight: 500 !important;
+}
+
+.price {
+    font-size: 1.5rem !important;
+    font-weight: 800 !important;
 }
