--- a/style.css
+++ b/style.css
@@ -55,3 +55,62 @@
   background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)) !important;
   text-align: center;
 }
+
+/* footer */
+
+#page-footer {
+  background-color: #f0c08f;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 1rem;
+}
+
+.footer__col {
+  padding: .3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 20vw;
+}
+
+.footer__title {
+  color: white !important;
+  font-style: italic;
+  padding: 0.5rem 0;
+  font-size: 1.1rem;
+}
+
+.footer__logo {
+  width: 6rem;
+}
+
+.footer__logo-labels {
+  width: 12rem;
+}
+
+.footer__logo-mail {
+  width: 2rem;
+}
+
+.footer__logo-address {
+  width: 4rem;
+}
+
+.footer__link, .footer p {
+  font-size: .85rem;
+}
+
+.footer__link-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#page-footer a:hover {
+  color: #22222250 !important;
+}
+
+.footer__text {
+  font-size: .85rem;
+}
