Finalised file structure modification

--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
 */
 
 /* Seperate Sheet to override woocommerce styles */
-@import url('./woocommerce.css');
-@import url('./footer.css');
+@import url('./assets/css/woocommerce.css');
+@import url('./assets/css/footer.css');
 
 
 /* Variables */ 
@@ -65,88 +65,15 @@
   text-align: center;
 }
 
-/* footer */
+/* Newsletter Form */ 
 
-#page-footer {
-  background-color: var(--bg-color-main);
-  display: flex;
-  justify-content: space-evenly;
-  padding: 1rem;
-  line-height: normal;
+input.tnp-submit {
+  transition-duration: 400ms;
+  transition-property: box-shadow;
 }
 
-.footer__col {
-  padding: .3rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  max-width: 20vw;
-}
-
-@media (max-width: 768px) {
-  #page-footer {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .footer__col {
-    max-width: 90vw;
-  }
-}
-
-
-.footer__title {
-  color: white !important;
-  font-style: italic;
-  padding: 0.5rem 0;
-  font-size: 1.1rem;
-}
-
-.footer__logo {
-  width: 8rem;
-}
-
-.footer__logo-labels {
-  width: 12rem;
-}
-
-.footer__logo-mail {
-  width: 2rem;
-}
-
-.footer__logo--socials-container {
-  display: flex;
-}
-
-.footer__logo-socials-img {
-  width: 4.5rem;
-}
-
-.footer__logo-address {
-  width: 5rem;
-}
-
-.footer > p {
-  font-size: .85rem;
-  color: var(--text-color-main);
-}
-
-.footer__link {
-  font-size: .85rem;
-  color: var(--text-color-main) !important;
-}
-
-.footer__link:hover {
-  color: #22222250 !important;
-}
-
-.footer__link-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.footer__text {
-  font-size: .85rem;
+input.tnp-submit:hover {
+  cursor: pointer;
+  box-shadow: inset 0 0 10px #e5e4e3;
+  /* transition: 200ms; */
 }
