--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@
 */
 
 /* Seperate Sheet to override woocommerce styles */
-@import url('./assets/css/woocommerce.css');
+@import url('./assets/css/contact.css');
 @import url('./assets/css/footer.css');
+@import url('./assets/css/woocommerce.css');
 
 
 /* Variables */ 
