Style page heading colour

--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@
 
 /* Overide defaults from Bard theme */
 
+.page-title {
+  color: var(--text-color-main) !important;
+}
+
 /* Homepage */
 
 /* Header */
